src-tauri/clippy.txt
    Checking stockenboard v0.1.0 (C:\Users\Wing\Desktop\Github_USING\StockenBoard\src-tauri)
error[E0252]: the name `remove_subscriptions` is defined multiple times
  --> src\lib.rs:17:5
   |
16 |     remove_subscriptions, remove_theme_bg, rename_view, reset_all_data, save_theme_bg, set_api_enabled,
   |     -------------------- previous import of the value `remove_subscriptions` here
17 |     remove_subscriptions, remove_theme_bg, rename_view, save_theme_bg, set_api_enabled,
   |     ^^^^^^^^^^^^^^^^^^^^--
   |     |
   |     `remove_subscriptions` reimported here
   |     help: remove unnecessary import
   |
   = note: `remove_subscriptions` must be defined only once in the value namespace of this module

error[E0252]: the name `remove_theme_bg` is defined multiple times
  --> src\lib.rs:17:27
   |
16 |     remove_subscriptions, remove_theme_bg, rename_view, reset_all_data, save_theme_bg, set_api_enabled,
   |                           --------------- previous import of the value `remove_theme_bg` here
17 |     remove_subscriptions, remove_theme_bg, rename_view, save_theme_bg, set_api_enabled,
   |                           ^^^^^^^^^^^^^^^--
   |                           |
   |                           `remove_theme_bg` reimported here
   |                           help: remove unnecessary import
   |
   = note: `remove_theme_bg` must be defined only once in the value namespace of this module

error[E0252]: the name `rename_view` is defined multiple times
  --> src\lib.rs:17:44
   |
16 |     remove_subscriptions, remove_theme_bg, rename_view, reset_all_data, save_theme_bg, set_api_enabled,
   |                                            ----------- previous import of the value `rename_view` here
17 |     remove_subscriptions, remove_theme_bg, rename_view, save_theme_bg, set_api_enabled,
   |                                            ^^^^^^^^^^^--
   |                                            |
   |                                            `rename_view` reimported here
   |                                            help: remove unnecessary import
   |
   = note: `rename_view` must be defined only once in the value namespace of this module

error[E0252]: the name `save_theme_bg` is defined multiple times
  --> src\lib.rs:17:57
   |
16 |     remove_subscriptions, remove_theme_bg, rename_view, reset_all_data, save_theme_bg, set_api_enabled,
   |                                                                         ------------- previous import of the value `save_theme_bg` here
17 |     remove_subscriptions, remove_theme_bg, rename_view, save_theme_bg, set_api_enabled,
   |                                                         ^^^^^^^^^^^^^--
   |                                                         |
   |                                                         `save_theme_bg` reimported here
   |                                                         help: remove unnecessary import
   |
   = note: `save_theme_bg` must be defined only once in the value namespace of this module

error[E0252]: the name `set_api_enabled` is defined multiple times
  --> src\lib.rs:17:72
   |
16 |     remove_subscriptions, remove_theme_bg, rename_view, reset_all_data, save_theme_bg, set_api_enabled,
   |                                                                                        --------------- previous import of the value `set_api_enabled` here
17 |     remove_subscriptions, remove_theme_bg, rename_view, save_theme_bg, set_api_enabled,
   |                                                                        ^^^^^^^^^^^^^^^-
   |                                                                        |
   |                                                                        `set_api_enabled` reimported here
   |                                                                        help: remove unnecessary import
   |
   = note: `set_api_enabled` must be defined only once in the value namespace of this module

error[E0432]: unresolved import `commands::reset_all_data`
  --> src\lib.rs:16:57
   |
16 |     remove_subscriptions, remove_theme_bg, rename_view, reset_all_data, save_theme_bg, set_api_enabled,
   |                                                         ^^^^^^^^^^^^^^ no `reset_all_data` in `commands`

error: cannot find macro `__cmd__reset_all_data` in this scope
   --> src\lib.rs:116:13
    |
116 |             reset_all_data,
    |             ^^^^^^^^^^^^^^

error[E0425]: cannot find function `list_subscriptions` in this scope
   --> src\lib.rs:69:13
    |
 69 |               list_subscriptions,
    |               ^^^^^^^^^^^^^^^^^^
    |
   ::: src\commands.rs:183:1
    |
183 | / pub async fn add_subscription(
184 | |     state: tauri::State<'_, AppState>,
185 | |     sub_type: String,
186 | |     symbol: String,
...   |
205 | |     Ok(id)
206 | | }
    | |_- similarly named function `add_subscription` defined here
    |
help: a function with a similar name exists
    |
 69 -             list_subscriptions,
 69 +             add_subscription,
    |
help: consider importing this function
    |
  8 + use crate::commands::list_subscriptions;
    |

error[E0425]: cannot find function `list_views` in this scope
  --> src\lib.rs:80:13
   |
80 |             list_views,
   |             ^^^^^^^^^^ not found in this scope
   |
help: consider importing this function
   |
 8 + use crate::commands::list_views;
   |

error[E0425]: cannot find function `read_local_file_base64` in this scope
  --> src\lib.rs:95:13
   |
95 |             read_local_file_base64,
   |             ^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
   |
help: consider importing this function
   |
 8 + use crate::commands::read_local_file_base64;
   |

error[E0425]: cannot find function `lookup_dex_pool` in this scope
   --> src\lib.rs:106:13
    |
106 |             lookup_dex_pool,
    |             ^^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
  8 + use crate::commands::lookup_dex_pool;
    |

error[E0425]: cannot find function `purge_all_history` in this scope
   --> src\lib.rs:114:13
    |
114 |             purge_all_history,
    |             ^^^^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
  8 + use crate::commands::purge_all_history;
    |

error: unused imports: `remove_subscriptions`, `remove_theme_bg`, `rename_view`, `save_theme_bg`, and `set_api_enabled`
  --> src\lib.rs:17:5
   |
17 |     remove_subscriptions, remove_theme_bg, rename_view, save_theme_bg, set_api_enabled,
   |     ^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^  ^^^^^^^^^^^  ^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^
   |
   = note: `-D unused-imports` implied by `-D warnings`
   = help: to override `-D warnings` add `#[allow(unused_imports)]`

error: this function depends on never type fallback being `()`
   --> src\lib.rs:51:1
    |
 51 | pub fn run() {
    | ^^^^^^^^^^^^
    |
    = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in Rust 2024 and in a future release in all editions!
    = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/never-type-fallback.html>
    = help: specify the types explicitly
note: in edition 2024, the requirement `!: api_server::_::_serde::Deserialize<'_>` will fail
   --> src\commands.rs:174:1
    |
174 |   #[tauri::command]
    |   ^^^^^^^^^^^^^^^^^
    |
   ::: src\lib.rs:55:25
    |
 55 |           .invoke_handler(tauri::generate_handler![
    |  _________________________-
 56 | |             // Provider / Fetch
 57 | |             fetch_asset_price,
 58 | |             fetch_multiple_prices,
...   |
122 | |             set_api_enabled,
123 | |         ])
    | |_________- in this macro invocation
    = note: `#[deny(dependency_on_unit_never_type_fallback)]` (part of `#[deny(rust_2024_compatibility)]`) on by default
    = note: this error originates in the macro `__cmd__list_subscriptions` which comes from the expansion of the macro `tauri::generate_handler` (in Nightly builds, run with -Z macro-backtrace for more info)

Some errors have detailed explanations: E0252, E0425, E0432.
For more information about an error, try `rustc --explain E0252`.
error: could not compile `stockenboard` (lib) due to 15 previous errors
